Add API to get a single inject operation
